[gd_scene load_steps=117 format=3 uid="uid://be281pixkehmv"]

[ext_resource type="Script" uid="uid://c5ckqxptboifi" path="res://Scenes/Player/player.gd" id="1_onrkg"]
[ext_resource type="Texture2D" uid="uid://cfvuaboa4mfj8" path="res://Assets/Player/archer_shadow.png" id="2_xpcdj"]

[sub_resource type="AtlasTexture" id="AtlasTexture_a3d8c"]
atlas = ExtResource("2_xpcdj")
region = Rect2(0, 1280, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xpcdj"]
atlas = ExtResource("2_xpcdj")
region = Rect2(64, 1280, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gyc8k"]
atlas = ExtResource("2_xpcdj")
region = Rect2(128, 1280, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qflxp"]
atlas = ExtResource("2_xpcdj")
region = Rect2(192, 1280, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0pk7v"]
atlas = ExtResource("2_xpcdj")
region = Rect2(256, 1280, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rblve"]
atlas = ExtResource("2_xpcdj")
region = Rect2(320, 1280, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yymo2"]
atlas = ExtResource("2_xpcdj")
region = Rect2(64, 1792, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bwx41"]
atlas = ExtResource("2_xpcdj")
region = Rect2(128, 1792, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_osx4f"]
atlas = ExtResource("2_xpcdj")
region = Rect2(192, 1792, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_edegh"]
atlas = ExtResource("2_xpcdj")
region = Rect2(256, 1792, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_14803"]
atlas = ExtResource("2_xpcdj")
region = Rect2(64, 1728, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4pjp3"]
atlas = ExtResource("2_xpcdj")
region = Rect2(128, 1728, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_i1fur"]
atlas = ExtResource("2_xpcdj")
region = Rect2(192, 1728, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_uqsid"]
atlas = ExtResource("2_xpcdj")
region = Rect2(256, 1728, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_diadi"]
atlas = ExtResource("2_xpcdj")
region = Rect2(64, 1856, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hwgj8"]
atlas = ExtResource("2_xpcdj")
region = Rect2(128, 1856, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_e12vc"]
atlas = ExtResource("2_xpcdj")
region = Rect2(192, 1856, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bpp7b"]
atlas = ExtResource("2_xpcdj")
region = Rect2(256, 1856, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gce3k"]
atlas = ExtResource("2_xpcdj")
region = Rect2(64, 1664, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_djm72"]
atlas = ExtResource("2_xpcdj")
region = Rect2(128, 1664, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_x8mvv"]
atlas = ExtResource("2_xpcdj")
region = Rect2(192, 1664, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4n8rx"]
atlas = ExtResource("2_xpcdj")
region = Rect2(256, 1664, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_po18e"]
atlas = ExtResource("2_xpcdj")
region = Rect2(0, 1152, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_v37cr"]
atlas = ExtResource("2_xpcdj")
region = Rect2(64, 1152, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8d028"]
atlas = ExtResource("2_xpcdj")
region = Rect2(128, 1152, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0liok"]
atlas = ExtResource("2_xpcdj")
region = Rect2(192, 1152, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fn4qh"]
atlas = ExtResource("2_xpcdj")
region = Rect2(256, 1152, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5omc3"]
atlas = ExtResource("2_xpcdj")
region = Rect2(320, 1152, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pcwjh"]
atlas = ExtResource("2_xpcdj")
region = Rect2(384, 1152, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ejxfg"]
atlas = ExtResource("2_xpcdj")
region = Rect2(448, 1152, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_huyyu"]
atlas = ExtResource("2_xpcdj")
region = Rect2(512, 1152, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_m5eiq"]
atlas = ExtResource("2_xpcdj")
region = Rect2(576, 1152, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8g0gh"]
atlas = ExtResource("2_xpcdj")
region = Rect2(640, 1152, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0a2xn"]
atlas = ExtResource("2_xpcdj")
region = Rect2(704, 1152, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_grehw"]
atlas = ExtResource("2_xpcdj")
region = Rect2(0, 1088, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vn8q6"]
atlas = ExtResource("2_xpcdj")
region = Rect2(64, 1088, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8vj0r"]
atlas = ExtResource("2_xpcdj")
region = Rect2(128, 1088, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_j7g5o"]
atlas = ExtResource("2_xpcdj")
region = Rect2(192, 1088, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ckdd2"]
atlas = ExtResource("2_xpcdj")
region = Rect2(256, 1088, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_37mva"]
atlas = ExtResource("2_xpcdj")
region = Rect2(320, 1088, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vwcno"]
atlas = ExtResource("2_xpcdj")
region = Rect2(384, 1088, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_u8s58"]
atlas = ExtResource("2_xpcdj")
region = Rect2(448, 1088, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_d4a23"]
atlas = ExtResource("2_xpcdj")
region = Rect2(512, 1088, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hlqkp"]
atlas = ExtResource("2_xpcdj")
region = Rect2(576, 1088, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rbwwl"]
atlas = ExtResource("2_xpcdj")
region = Rect2(640, 1088, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dbngi"]
atlas = ExtResource("2_xpcdj")
region = Rect2(704, 1088, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_geihd"]
atlas = ExtResource("2_xpcdj")
region = Rect2(0, 1216, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gs43p"]
atlas = ExtResource("2_xpcdj")
region = Rect2(64, 1216, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_oshob"]
atlas = ExtResource("2_xpcdj")
region = Rect2(128, 1216, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4h47k"]
atlas = ExtResource("2_xpcdj")
region = Rect2(192, 1216, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mcfd4"]
atlas = ExtResource("2_xpcdj")
region = Rect2(256, 1216, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_f4of5"]
atlas = ExtResource("2_xpcdj")
region = Rect2(320, 1216, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8l7e3"]
atlas = ExtResource("2_xpcdj")
region = Rect2(384, 1216, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hn678"]
atlas = ExtResource("2_xpcdj")
region = Rect2(448, 1216, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4hadm"]
atlas = ExtResource("2_xpcdj")
region = Rect2(512, 1216, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_q0h8a"]
atlas = ExtResource("2_xpcdj")
region = Rect2(576, 1216, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mvmwy"]
atlas = ExtResource("2_xpcdj")
region = Rect2(640, 1216, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wb8kq"]
atlas = ExtResource("2_xpcdj")
region = Rect2(704, 1216, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_oh6x4"]
atlas = ExtResource("2_xpcdj")
region = Rect2(0, 1024, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qc6x1"]
atlas = ExtResource("2_xpcdj")
region = Rect2(64, 1024, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bfk3i"]
atlas = ExtResource("2_xpcdj")
region = Rect2(128, 1024, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hdl7r"]
atlas = ExtResource("2_xpcdj")
region = Rect2(192, 1024, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mw4px"]
atlas = ExtResource("2_xpcdj")
region = Rect2(256, 1024, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8rr78"]
atlas = ExtResource("2_xpcdj")
region = Rect2(320, 1024, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cvvwm"]
atlas = ExtResource("2_xpcdj")
region = Rect2(384, 1024, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gnhd0"]
atlas = ExtResource("2_xpcdj")
region = Rect2(448, 1024, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_awspn"]
atlas = ExtResource("2_xpcdj")
region = Rect2(512, 1024, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_47nv5"]
atlas = ExtResource("2_xpcdj")
region = Rect2(576, 1024, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ml2j2"]
atlas = ExtResource("2_xpcdj")
region = Rect2(640, 1024, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_plnq1"]
atlas = ExtResource("2_xpcdj")
region = Rect2(704, 1024, 64, 64)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_a3d8c"]
load_path = "res://.godot/imported/archer_shadow.png-f768aa84b20b76a259de1d9f26eae493.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_mtuoh"]
atlas = SubResource("CompressedTexture2D_a3d8c")
region = Rect2(0, 1536, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_htcer"]
atlas = SubResource("CompressedTexture2D_a3d8c")
region = Rect2(64, 1536, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dd0ac"]
atlas = SubResource("CompressedTexture2D_a3d8c")
region = Rect2(0, 1472, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0u5uq"]
atlas = SubResource("CompressedTexture2D_a3d8c")
region = Rect2(64, 1472, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jlvik"]
atlas = SubResource("CompressedTexture2D_a3d8c")
region = Rect2(0, 1600, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gk6dx"]
atlas = SubResource("CompressedTexture2D_a3d8c")
region = Rect2(64, 1600, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jhyir"]
atlas = SubResource("CompressedTexture2D_a3d8c")
region = Rect2(0, 1408, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_74mp2"]
atlas = SubResource("CompressedTexture2D_a3d8c")
region = Rect2(64, 1408, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_oikmp"]
atlas = ExtResource("2_xpcdj")
region = Rect2(0, 2560, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_06tpx"]
atlas = ExtResource("2_xpcdj")
region = Rect2(64, 2560, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7g0yx"]
atlas = ExtResource("2_xpcdj")
region = Rect2(128, 2560, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dey5f"]
atlas = ExtResource("2_xpcdj")
region = Rect2(192, 2560, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_r5xpd"]
atlas = ExtResource("2_xpcdj")
region = Rect2(256, 2560, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ks1b7"]
atlas = ExtResource("2_xpcdj")
region = Rect2(320, 2560, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hnuln"]
atlas = ExtResource("2_xpcdj")
region = Rect2(384, 2560, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_aqm4k"]
atlas = ExtResource("2_xpcdj")
region = Rect2(448, 2560, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rcvs5"]
atlas = ExtResource("2_xpcdj")
region = Rect2(0, 2496, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_h8ma5"]
atlas = ExtResource("2_xpcdj")
region = Rect2(64, 2496, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_eksi1"]
atlas = ExtResource("2_xpcdj")
region = Rect2(128, 2496, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jincj"]
atlas = ExtResource("2_xpcdj")
region = Rect2(192, 2496, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rqdc0"]
atlas = ExtResource("2_xpcdj")
region = Rect2(256, 2496, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qr1w5"]
atlas = ExtResource("2_xpcdj")
region = Rect2(320, 2496, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ythyg"]
atlas = ExtResource("2_xpcdj")
region = Rect2(384, 2496, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bmb2s"]
atlas = ExtResource("2_xpcdj")
region = Rect2(448, 2496, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ur3l4"]
atlas = ExtResource("2_xpcdj")
region = Rect2(0, 2624, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ahak"]
atlas = ExtResource("2_xpcdj")
region = Rect2(64, 2624, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rukb4"]
atlas = ExtResource("2_xpcdj")
region = Rect2(128, 2624, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4no11"]
atlas = ExtResource("2_xpcdj")
region = Rect2(192, 2624, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fcwna"]
atlas = ExtResource("2_xpcdj")
region = Rect2(256, 2624, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1agin"]
atlas = ExtResource("2_xpcdj")
region = Rect2(320, 2624, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2jnj1"]
atlas = ExtResource("2_xpcdj")
region = Rect2(384, 2624, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_enij7"]
atlas = ExtResource("2_xpcdj")
region = Rect2(448, 2624, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mwii3"]
atlas = ExtResource("2_xpcdj")
region = Rect2(0, 2432, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2aanf"]
atlas = ExtResource("2_xpcdj")
region = Rect2(64, 2432, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_m6ahd"]
atlas = ExtResource("2_xpcdj")
region = Rect2(128, 2432, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ogmfp"]
atlas = ExtResource("2_xpcdj")
region = Rect2(192, 2432, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ixrbb"]
atlas = ExtResource("2_xpcdj")
region = Rect2(256, 2432, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ei2r2"]
atlas = ExtResource("2_xpcdj")
region = Rect2(320, 2432, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_j6uq4"]
atlas = ExtResource("2_xpcdj")
region = Rect2(384, 2432, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_h5u0x"]
atlas = ExtResource("2_xpcdj")
region = Rect2(448, 2432, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_gyc8k"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a3d8c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xpcdj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gyc8k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qflxp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0pk7v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rblve")
}],
"loop": false,
"name": &"death",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yymo2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bwx41")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_osx4f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_edegh")
}],
"loop": false,
"name": &"dodge_d",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_14803")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4pjp3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i1fur")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uqsid")
}],
"loop": false,
"name": &"dodge_l",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_diadi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hwgj8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e12vc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bpp7b")
}],
"loop": false,
"name": &"dodge_r",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gce3k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_djm72")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x8mvv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4n8rx")
}],
"loop": false,
"name": &"dodge_u",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_po18e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v37cr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8d028")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0liok")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fn4qh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5omc3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pcwjh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ejxfg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_huyyu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m5eiq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8g0gh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0a2xn")
}],
"loop": false,
"name": &"draw_d",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_grehw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vn8q6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8vj0r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j7g5o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ckdd2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_37mva")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vwcno")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u8s58")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d4a23")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hlqkp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rbwwl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dbngi")
}],
"loop": false,
"name": &"draw_l",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_geihd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gs43p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oshob")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4h47k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mcfd4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f4of5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8l7e3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hn678")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4hadm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q0h8a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mvmwy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wb8kq")
}],
"loop": false,
"name": &"draw_r",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_oh6x4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qc6x1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bfk3i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hdl7r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mw4px")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8rr78")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cvvwm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gnhd0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_awspn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_47nv5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ml2j2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_plnq1")
}],
"loop": false,
"name": &"draw_u",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mtuoh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_htcer")
}],
"loop": true,
"name": &"idle_d",
"speed": 1.5
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dd0ac")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0u5uq")
}],
"loop": true,
"name": &"idle_l",
"speed": 1.5
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jlvik")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gk6dx")
}],
"loop": true,
"name": &"idle_r",
"speed": 1.5
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jhyir")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_74mp2")
}],
"loop": true,
"name": &"idle_u",
"speed": 1.5
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_oikmp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_06tpx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7g0yx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dey5f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r5xpd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ks1b7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hnuln")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aqm4k")
}],
"loop": true,
"name": &"run_d",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rcvs5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h8ma5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eksi1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jincj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rqdc0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qr1w5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ythyg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bmb2s")
}],
"loop": true,
"name": &"run_l",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ur3l4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ahak")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rukb4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4no11")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fcwna")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1agin")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2jnj1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_enij7")
}],
"loop": true,
"name": &"run_r",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mwii3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2aanf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m6ahd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ogmfp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ixrbb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ei2r2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j6uq4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h5u0x")
}],
"loop": true,
"name": &"run_u",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_fkybt"]
radius = 1.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_cvnsp"]
radius = 2.0
height = 4.0

[node name="Player" type="CharacterBody2D"]
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_onrkg")
attacks_per_second = 3.5

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -1.78814e-07)
scale = Vector2(0.17, 0.17)
sprite_frames = SubResource("SpriteFrames_gyc8k")
animation = &"idle_d"
autoplay = "idle_d"

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2, 2)

[node name="AttackAnimation" type="Timer" parent="."]
one_shot = true

[node name="AttackSpeedCD" type="Timer" parent="."]
one_shot = true

[node name="I-time" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="RollCD" type="Timer" parent="."]
one_shot = true

[node name="RollDuration" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="IdleArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="IdleArea"]
scale = Vector2(0.4, 0.4)
shape = SubResource("CircleShape2D_fkybt")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1.14068e-05, 3)
scale = Vector2(1.3, 1.3)
shape = SubResource("CapsuleShape2D_cvnsp")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="frame_changed" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_frame_changed"]
[connection signal="timeout" from="AttackAnimation" to="." method="_on_attack_animation_timeout"]
[connection signal="timeout" from="RollDuration" to="." method="_on_roll_duration_timeout"]
